--- a/index.Rmd
+++ b/index.Rmd
@@ -4,9 +4,9 @@ author: "Ümit Atlamaz"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
-bibliography: [book.bib, packages.bib]
-# url: your book url like https://bookdown.org/yihui/bookdown
-# cover-image: path to the social sharing image like images/cover.jpg
+bibliography:
+- book.bib
+- packages.bib
 description: |
   This is an R tutorial for the Ling 411 Class at Boğaziçi University in Fall 2022.
 link-citations: yes
